force-app/main/default/objects/CareCloud_Charge__c/CareCloud_Charge__c.object-meta.xml
<CustomObject>
    <label>CareCloud Charge</label>
    <nameField>
        <label>CareCloud Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CareCloud Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>