force-app/main/default/objects/CareCloud_Charge__c/fields/CareCloud_Charges_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Charges_Id__c</fullName>
    <externalId>true</externalId>
    <label>CareCloud Charges Id</label>
    <length>75</length>
    <type>Text</type>
</CustomField>