force-app/main/default/objects/CareCloud_Charge__c/fields/Diagnosis_Code_s__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code_s__c</fullName>
    <label>Diagnosis Code(s)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>