force-app/main/default/objects/CareCloud_Charge__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>