force-app/main/default/objects/CareCloud_Charge__c/fields/Patient_Person_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Person_Account_Id__c</fullName>
    <formula>Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Person Account Id</label>
    <type>Text</type>
</CustomField>