force-app/main/default/objects/CareCloud_Charge__c/fields/Posting_Date_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date_Date_Only__c</fullName>
    <formula>DATEVALUE( Posting_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date (Date Only)</label>
    <type>Date</type>
</CustomField>