force-app/main/default/objects/CareCloud_Charge__c/fields/Posting_Date_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date_Date_Value__c</fullName>
    <formula>datevalue( Posting_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date_Date Value</label>
    <type>Date</type>
</CustomField>