force-app/main/default/objects/CareCloud_Charge__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>simple charge reversal</fullName>
            </value>
            <value>
                <fullName>charge reversal</fullName>
            </value>
            <value>
                <fullName>returned insurance check reversal</fullName>
            </value>
            <value>
                <fullName>returned patient check reversal</fullName>
            </value>
            <value>
                <fullName>simple charge</fullName>
            </value>
            <value>
                <fullName>charge</fullName>
            </value>
            <value>
                <fullName>returned insurance check</fullName>
            </value>
            <value>
                <fullName>returned patient check</fullName>
            </value>
            <value>
                <fullName>insurance adjustment</fullName>
            </value>
            <value>
                <fullName>insurance adjustment refund</fullName>
            </value>
            <value>
                <fullName>insurance adjustment refund reversal</fullName>
            </value>
            <value>
                <fullName>insurance adjustment reversal</fullName>
            </value>
            <value>
                <fullName>insurance payment</fullName>
            </value>
            <value>
                <fullName>insurance payment refund</fullName>
            </value>
            <value>
                <fullName>insurance payment refund reversal</fullName>
            </value>
            <value>
                <fullName>insurance payment reversal</fullName>
            </value>
            <value>
                <fullName>patient adjustment</fullName>
            </value>
            <value>
                <fullName>patient adjustment reversal</fullName>
            </value>
            <value>
                <fullName>patient payment</fullName>
            </value>
            <value>
                <fullName>patient payment refund</fullName>
            </value>
            <value>
                <fullName>patient payment refund reversal</fullName>
            </value>
            <value>
                <fullName>patient payment reversal</fullName>
            </value>
            <value>
                <fullName>withhold</fullName>
            </value>
            <value>
                <fullName>withhold refund</fullName>
            </value>
            <value>
                <fullName>withhold refund reversal</fullName>
            </value>
            <value>
                <fullName>withhold reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>